--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "event-app-web-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js -e js,html"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.8.6",
+    "mongoose": "^5.8.6"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.2"
   }
 }
