--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-status-codes": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.6",
+    "nodemailer": "^6.4.2",
     "validator": "^12.1.0"
   },
   "devDependencies": {
